    configuration options). (Anatol Belski)
  . Fixed bug #69212 (Leaking VIA_HANDLER func when exception thrown in
    __call/... arg passing). (Nikita)
  . Fixed bug #69221 (Segmentation fault when using a generator in combination
    with an Iterator). (Nikita)

- Date:
  . Export date_get_immutable_ce so that it can be used by extensions. (Derick
    Rethans)

- Curl:
  . Implemented FR#69278 (HTTP2 support). (Masaki Kagaya)

- Enchant:
  . Fixed bug #65406 (Enchant broker plugins are in the wrong place in windows
    builds). (Anatol)

- Filter:
  . Fixed bug #69202 (FILTER_FLAG_STRIP_BACKTICK ignored unless other
    flags are used). (Jeff Welch)
  . Fixed bug #69203 (FILTER_FLAG_STRIP_HIGH doesn't strip ASCII 127). (Jeff
    Welch)

- Mbstring:
  . Fixed bug #68846 (False detection of CJK Unified Ideographs Extension E).
    (Masaki Kagaya)

- OpenSSL:
  . Fixed bug #67403 (Add signatureType to openssl_x509_parse).
  . Add a check for RAND_egd to allow compiling against LibreSSL (Leigh)

- Phar:
  . Fixed bug #64343 (PharData::extractTo fails for tarball created by BSD tar).
    (Mike)
  . Fixed bug #64931 (phar_add_file is too restrictive on filename). (Mike)
  . Fixed bug #65467 (Call to undefined method cli_arg_typ_string). (Mike)
  . Fixed bug #67761 (Phar::mapPhar fails for Phars inside a path containing 
    ".tar"). (Mike)

- Postgres:
  . Fixed bug #68741 (Null pointer dereference). (CVE-2015-1352) (Laruence)

- SPL:
  . Fixed bug #69227 (Use after free in zval_scan caused by
     spl_object_storage_get_gc). (adam dot scarr at 99designs dot com)

- SOAP:
  . Fixed bug #69293 (NEW segfault when using SoapClient::__setSoapHeader 
     (bisected, regression)). (thomas at shadowweb dot org, Laruence)

- SQLITE:
  . Fixed bug #68760 (SQLITE segfaults if custom collator throws an exception).
     (Dan Ackroyd)
  . Fixed bug #69287 (Upgrade bundled sqlite to 3.8.8.3). (Anatol)

19 Mar 2015, PHP 5.5.23

- Core: