@@ -1,4 +1,4 @@
-/* Generated by re2c 0.13.5 on Mon Aug 18 18:28:27 2014 */
+/* Generated by re2c 0.13.5 on Tue Mar 31 16:32:03 2015 */
 #line 1 "ext/date/lib/parse_date.re"
 /*
    +----------------------------------------------------------------------+
@@ -19864,9 +19864,9 @@ yy1315:
 
 		/* skip "last day of" or "first day of" */
 		if (*ptr == 'l' || *ptr == 'L') {
-			s->time->relative.first_last_day_of = 2;
+			s->time->relative.first_last_day_of = TIMELIB_SPECIAL_LAST_DAY_OF_MONTH;
 		} else {
-			s->time->relative.first_last_day_of = 1;
+			s->time->relative.first_last_day_of = TIMELIB_SPECIAL_FIRST_DAY_OF_MONTH;
 		}
 
 		TIMELIB_DEINIT;
