@@ -1030,9 +1030,9 @@ weekdayof        = (reltextnumber|reltexttext) space (dayfull|dayabbr) space 'of
 
 		/* skip "last day of" or "first day of" */
 		if (*ptr == 'l' || *ptr == 'L') {
-			s->time->relative.first_last_day_of = 2;
+			s->time->relative.first_last_day_of = TIMELIB_SPECIAL_LAST_DAY_OF_MONTH;
 		} else {
-			s->time->relative.first_last_day_of = 1;
+			s->time->relative.first_last_day_of = TIMELIB_SPECIAL_FIRST_DAY_OF_MONTH;
 		}
 
 		TIMELIB_DEINIT;
